<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_album"
        android:icon="@drawable/ic_album"
        android:title="@string/album"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_artist"
        android:icon="@drawable/ic_artist"
        android:title="@string/artist"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_playlist"
        android:icon="@drawable/ic_playlist"
        android:title="@string/playlist"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_music"
        android:icon="@drawable/ic_music"
        android:title="@string/title_activity_music"
        app:showAsAction="ifRoom" />


</menu>
