<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/albumCoverImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/default_album"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/albumTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/artistNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist_name"
            android:textSize="16sp"
            android:ellipsize="end"
            android:maxLines="1"/>
    </LinearLayout>
</LinearLayout>
