<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicActivity"
    style="?android:attr/buttonBarStyle">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"/>

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:queryHint="Search music"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/music_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/search_view"
        android:layout_above="@id/bottom_buttons"
        tools:listitem="@layout/item_music"/>

    <LinearLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</RelativeLayout>